# pipecat-quickstart

./: .env.docker  DOCKER.md  docker-compose.yml  package-lock.json
client/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
client/src/app/: page.tsx
client/src/app/api/offer/: route.ts
client/src/app/api/start/: route.ts
client/src/components/: ChatGPTStyleVoiceUI.tsx
server/: Dockerfile  agent_response.py  bot.py  env.example  pipecat_langgraph.py  pyproject.toml  requirements.txt  websocket_server.py
