[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-aws>=0.2.30",
    "langchain-chroma>=0.2.5",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai>=2.0.28",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.3",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-supervisor>=0.0.29",
    "pipecat-ai[cartesia,deepgram,langchain,mlx-whisper,openai,runner,silero,webrtc]>=0.0.77",
    "psycopg-binary>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
